--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 191,
    "id": "f8a1e1df",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 192,
    "id": "0b5f297f",
    "metadata": {},
    "outputs": [
@@ -29,10 +29,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 93.0.4577\n",
       "Get LATEST driver version for 93.0.4577\n",
-      "There is no [mac64] chromedriver for browser 93.0.4577 in cache\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/93.0.4577.15/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/oi/.wdm/drivers/chromedriver/mac64/93.0.4577.15]\n"
+      "Driver [/Users/oi/.wdm/drivers/chromedriver/mac64/93.0.4577.15/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -44,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 193,
    "id": "e191249a",
    "metadata": {},
    "outputs": [
@@ -54,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 194,
    "id": "b8b12c81",
    "metadata": {},
    "outputs": [],
@@ -82,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 195,
    "id": "f43a9714",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Deadline Closing for Names to Fly on NASA's Next Mars Rover</div>"
+       "<div class=\"content_title\">3 Things We've Learned From NASA's Mars InSight </div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 196,
    "id": "bd04c261",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Deadline Closing for Names to Fly on NASA's Next Mars Rover\""
+       "\"3 Things We've Learned From NASA's Mars InSight \""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 197,
    "id": "3bee050d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'You have until Sept. 30 to send your names to Mars aboard the Mars 2020 rover. '"
+       "'Scientists are finding new mysteries since the geophysics mission landed two years ago.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 198,
    "id": "8ca79a23",
    "metadata": {},
    "outputs": [],
@@ -170,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 199,
    "id": "07b87091",
    "metadata": {},
    "outputs": [],
@@ -182,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 200,
    "id": "a7e55d18",
    "metadata": {},
    "outputs": [],
@@ -194,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 201,
    "id": "7a14ff46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 202,
    "id": "1fa4e0c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 203,
    "id": "7a47d206",
    "metadata": {},
    "outputs": [
@@ -336,7 +333,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 204,
    "id": "e32f3581",
    "metadata": {},
    "outputs": [
@@ -361,7 +358,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 205,
    "id": "c5c6efd8",
    "metadata": {},
    "outputs": [],
@@ -406,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 224,
    "id": "29cca1ce",
    "metadata": {},
    "outputs": [
@@ -431,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 225,
    "id": "608257d4",
    "metadata": {},
    "outputs": [],
@@ -444,69 +441,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 226,
    "id": "531df404",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "find() missing 1 required positional argument: 'self'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-42df19f6220d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mhemisphere_image_urls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mhemispheres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"result-list\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"item\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mhemispheres\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mhemisphere\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: find() missing 1 required positional argument: 'self'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "html = browser.html\n",
-    "img_urls_soup = soup(html, 'html.parser')\n",
+    "img_soup = soup(html, 'html.parser')\n",
     "\n",
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
+    "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "browser.links.find_by_partial_text('Cerberus Hemisphere Enhanced').click()\n",
     "\n",
-    "# Retrieve all elements that contain need information \n",
-    "# hemispheres= img_urls_soup.find_all('div', class_=\"item\")\n",
+    "# Find hemisphere with image link and title\n",
+    "# links = img_soup.find_all('div', class_='description')\n",
+    "links = browser.find_by_css('a.product-item img')\n",
     "\n",
-    "# for item in hemispheres:\n",
-    "#     title = img_urls_soup.find('h3').text\n",
-    "#     url = img_urls_soup.find('img', class_='thumb').get('src')\n",
-    "#     img_url = f'https://marshemispheres.com/{url}'\n",
-    "#     print(title)\n",
-    "#     print(img_url)\n",
-    "    \n",
-    "#     items= dict({'img_url':img_url,'title': title})\n",
-    "#     hemisphere_image_urls.append(items)\n",
-    "\n",
-    "# img_urls_soup.find_all('div', class_=\"downloads\")\n",
-    "hemisphere_image_urls = []\n",
-    "\n",
-    "hemispheres = browser.find_by_css('a.product-item img')[i].click()\n",
-    "for image in hemispheres:\n",
+    "# Loop through each link of hemispheres on page\n",
+    "for i in range(len(links)):\n",
+    "    # Create dictionary to hold title and image url\n",
     "    hemisphere = {}\n",
-    "    hemisphere[\"title\"] = result.find(\"h3\").text\n",
-    "    browser.links.find_by_partial_text(hemisphere[\"title\"]).click()\n",
-    "    hemisphere[\"img_url\"] = astrogeology_url + soup.find(class_=\"wide-image\")[\"src\"]\n",
-    "    hemisphere_image_urls.append(hemisphere)\n"
+    "    \n",
+    "    # Old.Solution.Find the elements and scrape data\n",
+    "    # hemisphere_url = image.find('a', class_='itemLink product-item')\n",
+    "    # Get 'href' page\n",
+    "    # hemisphere_page = hemisphere_url.get('href')\n",
+    "    # Crate a link of the page\n",
+    "    # hemisphere_link = url + hemisphere_page\n",
+    "    # Visite it and parse it to Retrieve the data\n",
+    "    # browser.visit(hemisphere_link)    \n",
+    "    # html = browser.html\n",
+    "    # hemispheres = soup(html, 'html.parser')\n",
+    "\n",
+    "    browser.find_by_css('a.product-item img')[i].click()\n",
+    "    \n",
+    "    # Old.Solution. Find the Sample image and get the href\n",
+    "    # hemisphere_link = hemispheres.find('a', text='Sample').get('href')\n",
+    "    # hemisphere['img_url'] = hemisphere_link\n",
+    "    \n",
+    "    # Next, we find the Sample image anchor tag and extract the href\n",
+    "    sample_elem = browser.links.find_by_text('Sample').first\n",
+    "    hemisphere['img_url'] = sample_elem['href']\n",
+    "        \n",
+    "    # Retrieve title\n",
+    "    hemisphere['title'] = browser.find_by_css('h2.title').text\n",
+    "\n",
+    "    # Append dictionaries to list\n",
+    "    hemisphere_image_urls.append(hemisphere)\n",
+    "    \n",
+    "    # Finally, we navigate backwards\n",
+    "    browser.back()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 227,
    "id": "291a2890",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 228,
    "id": "2400bebb",
    "metadata": {},
    "outputs": [],
