--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 238,
    "id": "f8a1e1df",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 239,
    "id": "0b5f297f",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 240,
    "id": "e191249a",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 241,
    "id": "b8b12c81",
    "metadata": {},
    "outputs": [],
@@ -79,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 242,
    "id": "f43a9714",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">3 Things We've Learned From NASA's Mars InSight </div>"
+       "<div class=\"content_title\">Join NASA for the Launch of the Mars 2020 Perseverance Rover</div>"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 243,
    "id": "bd04c261",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"3 Things We've Learned From NASA's Mars InSight \""
+       "'Join NASA for the Launch of the Mars 2020 Perseverance Rover'"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 244,
    "id": "3bee050d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Scientists are finding new mysteries since the geophysics mission landed two years ago.'"
+       "'No matter where you live, choose from a menu of activities to join NASA as we \"Countdown to Mars\" and launch the Perseverance rover to the Red Planet.'"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 245,
    "id": "8ca79a23",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 246,
    "id": "07b87091",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 247,
    "id": "a7e55d18",
    "metadata": {},
    "outputs": [],
@@ -191,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 248,
    "id": "7a14ff46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,17 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 249,
    "id": "1fa4e0c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 250,
    "id": "7a47d206",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 251,
    "id": "e32f3581",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 252,
    "id": "c5c6efd8",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 253,
    "id": "29cca1ce",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 254,
    "id": "608257d4",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 255,
    "id": "531df404",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 256,
    "id": "291a2890",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 257,
    "id": "2400bebb",
    "metadata": {},
    "outputs": [],
@@ -536,8 +536,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "id": "7f595dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install ipython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "3c23adf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  pip install nbconvert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "d9cfcbc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[TerminalIPythonApp] WARNING | Subcommand `ipython nbconvert` is deprecated and will be removed in future versions.\n",
+      "[TerminalIPythonApp] WARNING | You likely want to use `jupyter nbconvert` in the future\n",
+      "[NbConvertApp] Converting notebook Mission_to_Mars_Challenge.ipynb to script\n",
+      "[NbConvertApp] Writing 4833 bytes to Mission_to_Mars_Challenge.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ipython nbconvert --to script Mission_to_Mars_Challenge.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190172fe",
    "metadata": {},
    "outputs": [],
    "source": []
